Fix a bug when metadata tag is too short or too long

--- a/src/app/pages/detail/document-metadata-info/document-metadata-info.component.scss
+++ b/src/app/pages/detail/document-metadata-info/document-metadata-info.component.scss
@@ -82,6 +82,8 @@ table {
 					span {
 						font-family: 'Averta for TBWA W01 Black', helvetica, arial;
 						display: inline-block;
+            min-width: 140px;
+            max-width: 190px;
             line-height: 15px;
 						padding: 23px 15px;
 						font-size: 15px;
